--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -7,15 +7,22 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Set up Python
+      - name: Set up Node.js
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          node-version: '18'
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
+          npm install
           # Install your dependencies here
       - name: Run Unit Tests
         run: |
           echo "Running Unit Tests..."
+          npm test -- --coverage
+
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrects.GITHUB_TOKEN }}
+          path-to-lcov: ./coverage/lcov.info
 
