--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -10,7 +10,7 @@ jobs:
         with:
           submodules: true
       - name: Set up Node.js
-        uses: actions/setup-python@v4
+        uses: actions/setup-node@v4
         with:
           node-version: '18'
       - name: Install Dependencies
