--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "test:AIgeneratedByOtto": "nyc --reporter=lcov --report-dir coverage/mocha mocha \"tests/AIgeneratedByOtto/*.js\"",
     "test:designedByElli": "jest tests/designedByElli --coverageDirectory coverage/jest --coverageReporters=lcov",
     "test:AIgeneratedByElli": "jest tests/AIgeneratedByElli --coverageDirectory coverage/jest --coverageReporters=lcov",
-    "test:mocha": "npm run test:designedByOtto && npm run test:AIgeneratedByOtto",
+    "test:mocha": "nyc --reporter=lcov --report-dir coverage/mocha mocha \"tests/designedByOtto/**/*.js\" \"tests/AIgeneratedByOtto/**/*.js\"",
     "test:jest": "npm run test:designedByElli && npm run test:AIgeneratedByElli",
-    "test:coverage": "npm run test:mocha || true; npm run test:jest || true; lcov-result-merger 'coverage/**/lcov.info' > coverage/lcov.info"
+    "test:coverage": "npm run test:mocha || true; npm run test:jest || true; npx lcov-result-merger \"coverage/**/lcov.info\" > coverage/lcov.info"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -18,5 +18,16 @@
     "lcov-result-merger": "^5.0.1",
     "mocha": "^10.2.0",
     "nyc": "^17.1.0"
-  }
+  },
+  "nyc": {
+  "reporter": ["lcov"],
+  "report-dir": "coverage/mocha",
+  "extension": [".js"],
+  "exclude": ["tests/**", "**/*.test.js"],
+  "include": [
+    "COMP.SE.200-2024-2025-1/src/**/*.js"
+  ],
+  "all": true
+}
+
 }
