--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
   "type": "module",
   "scripts": {
-    "test:designedByOtto": "nyc --reporter=lcov --report-dir coverage/mocha mocha \"tests/designedByOtto/*.js\"",
-    "test:AIgeneratedByOtto": "nyc --reporter=lcov --report-dir coverage/mocha mocha \"tests/AIgeneratedByOtto/*.js\"",
-    "test:designedByElli": "jest tests/designedByElli --coverageDirectory coverage/jest --coverageReporters=lcov",
-    "test:AIgeneratedByElli": "jest tests/AIgeneratedByElli --coverageDirectory coverage/jest --coverageReporters=lcov",
-    "test:mocha": "nyc --reporter=lcov --report-dir coverage/mocha mocha \"tests/designedByOtto/**/*.js\" \"tests/AIgeneratedByOtto/**/*.js\"",
-    "test:jest": "npm run test:designedByElli && npm run test:AIgeneratedByElli",
-    "test:coverage": "npm run test:mocha || true; npm run test:jest || true; npx lcov-result-merger \"coverage/**/lcov.info\" > coverage/lcov.info"
+  "test:designedByOtto": "c8 mocha \"tests/designedByOtto/*.js\"",
+  "test:AIgeneratedByOtto": "c8 mocha \"tests/AIgeneratedByOtto/*.js\"",
+
+  "test:designedByElli": "jest tests/designedByElli --coverageDirectory coverage/jest --coverageReporters=lcov",
+  "test:AIgeneratedByElli": "jest tests/AIgeneratedByElli --coverageDirectory coverage/jest --coverageReporters=lcov",
+
+  "test:mocha": "npm run test:designedByOtto && npm run test:AIgeneratedByOtto",
+  "test:jest": "npm run test:designedByElli && npm run test:AIgeneratedByElli",
+
+  "test:coverage": "npm run test:mocha || true; npm run test:jest || true; npx lcov-result-merger \"coverage/**/lcov.info\" > coverage/lcov.info"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "babel-jest": "^30.2.0",
+    "c8": "^10.1.3",
     "coveralls": "^3.1.1",
     "jest": "^30.2.0",
     "lcov-result-merger": "^5.0.1",
-    "mocha": "^10.2.0",
-    "nyc": "^17.1.0"
+    "mocha": "^10.2.0"
   },
-  "nyc": {
-  "reporter": ["lcov"],
-  "report-dir": "coverage/mocha",
-  "extension": [".js"],
-  "exclude": ["tests/**", "**/*.test.js"],
-  "include": [
-    "COMP.SE.200-2024-2025-1/src/**/*.js"
-  ],
-  "all": true
+  "c8": {
+  "include": ["COMP.SE.200-2024-2025-1/src/**/*.js"],
+  "exclude": ["tests/**"],
+  "reporter": ["lcov", "html", "text"],
+  "report-dir": "coverage/mocha"
 }
-
 }
