--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "test:AIgeneratedByOtto": "c8 mocha \"tests/AIgeneratedByOtto/*.js\"",
 
   "test:designedByElli": "jest tests/designedByElli --coverageDirectory coverage/jest --coverageReporters=lcov",
-  "test:AIgeneratedByElli": "jest tests/AIgeneratedByElli --coverageDirectory coverage/jest --coverageReporters=lcov",
+  "test:AIgeneratedByElli": "jest tests/AIgeneratedByElli --coverageDirectory coverage/jest/ai --coverageReporters=lcov",
 
   "test:mocha": "npm run test:designedByOtto && npm run test:AIgeneratedByOtto",
   "test:jest": "npm run test:designedByElli && npm run test:AIgeneratedByElli",
@@ -27,10 +27,7 @@
     "COMP.SE.200-2024-2025-1/src/add.js",
     "COMP.SE.200-2024-2025-1/src/eq.js",
     "COMP.SE.200-2024-2025-1/src/every.js",
-    "COMP.SE.200-2024-2025-1/src/isSymbol.js",
-    "COMP.SE.200-2024-2025-1/src/slice.js",
     "COMP.SE.200-2024-2025-1/src/toString.js",
-    "COMP.SE.200-2024-2025-1/src/upperFirst.js",
     "COMP.SE.200-2024-2025-1/src/words.js"
   ],
   "exclude": ["tests/**"],
